index.html file

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <header>Jon's Programming Amatuer Hour!!!</header>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="Portfolio.html">Portfolio</a></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
                 </ul>
                 
             </nav>
