add portfolio.html file

--- a/portfolio.html
+++ b/portfolio.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Jon's Programming Amatuer Hour!!!</title>
-        <style>
+        <style type="text/css">
             body {
                 background: rgb(52, 1, 1);
                 color: rgb(145, 145, 145);
@@ -12,6 +12,9 @@
             header {
                 font-size: 1.5em;
                 font-weight: bold;
+            }
+            h1 {
+                margin: 10px;
             }
             #all-contents {
                 max-width: 800px;
@@ -26,7 +29,7 @@
                 display: flex;
                 padding: 10px;
                 border: 5px inset red;
-                border-radius: 5px 25px;
+                border-radius: 50px;
             }
             nav header {
                 display: flex;
@@ -50,15 +53,6 @@
             main {
                 background: rgb(43, 22, 35);
                 display: flex;
-            }
-            .sidebar {
-                margin-right: 25px;
-                padding: 10px;
-            }
-            .sidebar img {
-                width: 200px;
-                border: 5px dotted red;
-                border-radius: 25px 50px;
             }
             .content {
                 flex: 1;
