--- a/portfolio.html
+++ b/portfolio.html
@@ -86,13 +86,14 @@
     </head>
     
     <body>
-        <div id="all contents">
+        <div id="all-contents">
             <nav>
-                <ui>
+                <header>Jon's Programming Amatuer Hour!!!</header>
+                <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li></li>
                     <li><a href="portfolio.html">Portfolio</a></li>
-                </ui>
+                    <li><a href="studies.html">Studies</a></li>
+                </ul>
             </nav>
             <main>
                 <div class="content">
