--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="studies.html">Studies</a></li>
                 </ul>
                 
             </nav>
@@ -88,20 +89,16 @@
                 </div>
                 
                 <div class="content">
-                    <head>
-                        Jon Mohon
+                        <header>Jon Mohon</header>
                         <p>Student at Operation Spark</p>
-                        <section class="Interest">
+                        <section class="interests">
                             <header>Interests</header>
                             <ul>
                                 <li>Programming</li>
-                                <li>Video Games</li>
-                                <li>Vocal Music</li>
                                 <li>Reading</li>
                                 <li>Anime</li>
                             </ul>
                         </section>
-                    </head>
                 </div>
             </main>
         </div>
