--- a/studies.html
+++ b/studies.html
@@ -27,7 +27,7 @@
     <body>
         <div id="all-contents">
         <nav>
-            <header>Sheba's Glorious Website</header>
+            <header>Jon's Programming Amateur Hour!!!</header>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="portfolio.html">Portfolio</a></li>
